# tonecheck

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/tonecheck/: __init__.py  cli.py  models.py  report.py
src/tonecheck/analyzer/: __init__.py  emotion.py  risk.py  tone.py
src/tonecheck/rewriter/: __init__.py  rewriter.py  suggester.py
tests/: test_benchmark.py  test_core.py  test_emotion.py  test_integration.py  test_rewriter.py  test_risk.py  test_tone.py
